fix some alignment issues

--- a/app/frontend/css/sketchpad.css
+++ b/app/frontend/css/sketchpad.css
@@ -4,6 +4,21 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: space-between
+	justify-content: space-around
 }
 
+.brush-large {
+	height: 75px;
+	width: 75px;
+}
+
+.brush-medium {
+	height: 50px;
+	width: 50px;
+
+}
+
+.brush-small {
+	height: 25px;
+	width: 25px;
+}
